--- a/miniprogram/pages/home/home.wxss
+++ b/miniprogram/pages/home/home.wxss
@@ -1,12 +1,47 @@
 /* miniprogram/pages/home/home.wxss */
+.tools_btn {
+  background-color:#87CEFA
+}
+
+.input {
+  display: flex;
+  justify-content: center;
+  margin: 12px 68px 12px 68px;
+  padding: 6px;
+  border-radius: 5px;
+  min-height: 1rem;
+  background-color: white;
+}
+
 .view_picker {
   display: flex;
   justify-content: center;
-  margin: 12px;
+  margin: 12px 68px 12px 68px;
+  padding: 6px;
+  border-radius: 5px;
+  min-height: 1rem;
+  background-color: white;
 }
 
 .button {
   display: flex;
   justify-content: center;
   margin: 12px;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+}
+
+.tools {
+  height: 20px;
+}
+
+.float_btn {
+  position: fixed;
+  width: 56px;
+  height: 56px;
+  bottom: 30px;
+  right: 20px;
 }
